# discord-react-reminder-bot

./: Procfile  fly.toml  pyproject.toml
react_reminder/: __main__.py  admin.py  bot.py  emoji.py  scheduler.py  util.py  util_test.py
src/react_reminder/: __main__.py  bot.py  path_flag.py  reminder_db.py  util_test.py
